--- a/css/main.css
+++ b/css/main.css
@@ -1381,10 +1381,10 @@ img {
   background-color: #54a22c;
 }
 .content::-webkit-scrollbar-corner {
-  background-color: none;
+  background-color: transparent;
 }
 .content::-webkit-resizer {
-  background-color: none;
+  background-color: transparent;
 }
 .header {
   background: rgba(0, 0, 0, 0.8) url(../images/header-logo-b0e.arb.png)
@@ -1750,13 +1750,13 @@ img {
   height: 3px;
 }
 .year.chat__data-item__choose::-webkit-scrollbar-button {
-  background-color: none;
+  background-color: transparent;
 }
 .year.chat__data-item__choose::-webkit-scrollbar-track {
-  background-color: none;
+  background-color: transparent;
 }
 .year.chat__data-item__choose::-webkit-scrollbar-track-piece {
-  background-color: none;
+  background-color: transparent;
 }
 .year.chat__data-item__choose::-webkit-scrollbar-thumb {
   height: 50px;
@@ -1768,7 +1768,7 @@ img {
   background-color: #54a22c;
 }
 .year.chat__data-item__choose::-webkit-resizer {
-  background-color: none;
+  background-color: transparent;
 }
 .month.chat__data-item__choose {
   left: -137px;
